fix: animation jump bug

--- a/src/ui/pages/IncomingRequest/IncomingRequest.scss
+++ b/src/ui/pages/IncomingRequest/IncomingRequest.scss
@@ -20,6 +20,10 @@
     text-align: center;
   }
 
+  .request-animation-center {
+    min-height: 20vh;
+  }
+
   .request-icons-row {
     display: flex;
     flex-direction: row;
